convert the user input to dataframe to predict the output

--- a/optimize-ac-usage.ipynb
+++ b/optimize-ac-usage.ipynb
@@ -502,8 +502,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "fc09bfd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Hours_per_day  Temp_set  Room_size  Outside_temp  AC_type  Electricity_cost\n",
+      "0              8        27        109            27      1.0             515.0\n",
+      "1              5        28        257            33      1.5             806.0\n",
+      "2              6        22        252            30      2.0             902.0\n",
+      "3              8        22        202            33      1.0             757.0\n",
+      "4              4        22        183            37      2.0             820.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "91d64703",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Hours_per_day = int(input(\"Enter the hours the AC will be used per day : \"))\n",
+    "Temp_set = int(input(\"Enter the temperature set (in an average) : \"))\n",
+    "Room_size = int(input(\"Enter the room size in sqfeet : \"))\n",
+    "Outside_temp = int(input(\"Enter the outside temp(on an average) : \"))\n",
+    "AC_type = int(input(\"Enter the AC type (1 ton/1.5 ton/2 ton) : \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c08d0de7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Hours_per_day  Temp_set  Room_size  Outside_temp  AC_type\n",
+      "0              8        27        109            27        1\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_test = pd.DataFrame({\n",
+    "    \"Hours_per_day\":[Hours_per_day],\n",
+    "    \"Temp_set\":[Temp_set],\n",
+    "    \"Room_size\":[Room_size],\n",
+    "    \"Outside_temp\":[Outside_temp],\n",
+    "    \"AC_type\":[AC_type]\n",
+    "})\n",
+    "print(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ee52b1ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = xgb.predict(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "526172c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[504.76077]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "310dd833",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.994770609013487\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = xgb.predict(x_train)\n",
+    "print(r2_score(pred,y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f05d749e",
    "metadata": {},
    "outputs": [],
    "source": []
