instantiated state for the agent

--- a/optimize-ac-usage.ipynb
+++ b/optimize-ac-usage.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd"
    ]
   },
@@ -612,8 +611,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "f05d749e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Annotated\n",
+    "from typing_extensions import TypedDict\n",
+    "from langchain_core.messages import HumanMessage \n",
+    "from langgraph.graph import StateGraph,START,END\n",
+    "from langgraph.graph.message import add_messages\n",
+    "from langchain_groq import ChatGroq\n",
+    "from langgraph.prebuilt import ToolNode,tools_condition\n",
+    "from langgraph.checkpoint.memory import MemorySaver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "90af7433",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class State:\n",
+    "    messages:Annotated[list,add_messages]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4d6794a",
    "metadata": {},
    "outputs": [],
    "source": []
