defined the graph

--- a/optimize-ac-usage.ipynb
+++ b/optimize-ac-usage.ipynb
@@ -640,10 +640,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d6794a",
+   "id": "53108d4d",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4d6794a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_builder = StateGraph(State)\n",
+    "graph_builder.add_node(\"llm_with_tool\",...)\n",
+    "graph_builder.add_node(\"tool\",ToolNode(tool))\n",
+    "graph_builder.add_edge(START,\"llm_with_tool\")\n",
+    "graph_builder.add_edge(\"llm_with_tool\",\"tool\")\n",
+    "graph_builder.add_edge(\"tool\",\"llm_with_tool\")\n",
+    "graph_builder.add_edge(\"llm_with_tool\",END)"
+   ]
   }
  ],
  "metadata": {
