removed unnecessary comments

--- a/optimize-ac-usage.ipynb
+++ b/optimize-ac-usage.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f05d749e",
    "metadata": {},
    "outputs": [],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "90af7433",
    "metadata": {},
    "outputs": [],
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1d023264",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "90206eb1",
    "metadata": {},
    "outputs": [],
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c96d3a1a",
    "metadata": {},
    "outputs": [],
@@ -628,20 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "895e9218",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def decide_next(state):\n",
-    "    if \"tool_call\" in state:  # example condillm_with_tooltion\n",
-    "        return \"tool\"\n",
-    "    return \"__end__\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "f4d6794a",
    "metadata": {},
    "outputs": [],
@@ -653,20 +640,16 @@
     "graph_builder.add_edge(START, \"llm_with_tool\")\n",
     "\n",
     "\n",
-    "\n",
-    "# tool always returns to llm_with_tool (never ends)\n",
     "graph_builder.add_edge(\"llm_with_tool\", \"tool\")\n",
     "graph_builder.add_edge(\"tool\",\"advice_agent\")\n",
     "graph_builder.add_edge(\"advice_agent\",END)\n",
-    "# Remove this — redundant and might allow accidental END without condition\n",
-    "# graph_builder.add_edge(\"llm_with_tool\", END)\n",
     "\n",
     "graph = graph_builder.compile()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "be9e1455",
    "metadata": {},
    "outputs": [
@@ -688,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "e0f5f597",
    "metadata": {},
    "outputs": [
@@ -696,7 +679,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[HumanMessage(content='My AC runs for 9 hours daily at 20 degrees. The room is 180 sq ft, outside temp is 38°C, and it’s a 2 ton AC. How much will I have to pay for electricity? Also, is this setup okay or am I wasting power?', additional_kwargs={}, response_metadata={}, id='17864ad5-76f4-4463-a356-3629e848fd47'), AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'n9p0mhsj2', 'function': {'arguments': '{\"AC_type\":2,\"Hours_per_day\":9,\"Outside_temp\":38,\"Room_size\":180,\"Temp_set\":20}', 'name': 'mlModel'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 75, 'prompt_tokens': 1138, 'total_tokens': 1213, 'completion_time': 0.214285714, 'prompt_time': 0.044013539, 'queue_time': 0.291947141, 'total_time': 0.258299253}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_2de508bbce', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--d6cd9292-3763-42df-99d6-bd6ff7915bb4-0', tool_calls=[{'name': 'mlModel', 'args': {'AC_type': 2, 'Hours_per_day': 9, 'Outside_temp': 38, 'Room_size': 180, 'Temp_set': 20}, 'id': 'n9p0mhsj2', 'type': 'tool_call'}], usage_metadata={'input_tokens': 1138, 'output_tokens': 75, 'total_tokens': 1213}), ToolMessage(content='The predicted electricity cost is ₹1242.42', name='mlModel', id='4be8ba6b-c05d-4a40-b207-be541569e98a', tool_call_id='n9p0mhsj2'), AIMessage(content=\"Based on your AC usage, it's predicted that you'll have to pay approximately ₹1242.42 for electricity.\\n\\nThis setup may not be the most efficient, considering the outside temperature is quite high (38°C) and the AC is running for 9 hours daily. Here's why:\\n\\n* Running the AC at 20°C for an extended period can be energy-intensive, especially when the outside temperature is high.\\n* A 2-ton AC for a 180 sq ft room might be oversized, which can lead to increased energy consumption.\\n\\nTo optimize your AC usage and reduce costs, consider the following suggestions:\\n\\n1. **Adjust the temperature**: Try increasing the temperature setting to 24°C or 25°C. This can help reduce energy consumption while still maintaining a comfortable temperature. For every degree of extra cooling, the energy consumption increases by 6-8%.\\n2. **Use a timer or schedule**: Instead of running the AC for 9 hours straight, consider using a timer or scheduling it to turn off during periods when the room is not occupied or when the outside temperature is slightly cooler (e.g., early morning or late evening).\\n\\nBy implementing these suggestions, you can potentially reduce your electricity costs and make your AC usage more efficient.\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 251, 'prompt_tokens': 119, 'total_tokens': 370, 'completion_time': 0.898547848, 'prompt_time': 0.003483627, 'queue_time': 0.076439814, 'total_time': 0.902031475}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_dd4ae1c591', 'finish_reason': 'stop', 'logprobs': None}, id='run--72bf2aa3-25e7-4585-8120-fe0466c064c7-0', usage_metadata={'input_tokens': 119, 'output_tokens': 251, 'total_tokens': 370})]\n"
+      "[HumanMessage(content='My AC runs for 9 hours daily at 20 degrees. The room is 180 sq ft, outside temp is 38°C, and it’s a 2 ton AC. How much will I have to pay for electricity? Also, is this setup okay or am I wasting power?', additional_kwargs={}, response_metadata={}, id='f805ecf0-893e-4317-9a9e-b839157c471f'), AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'cv66wcxah', 'function': {'arguments': '{\"AC_type\":2,\"Hours_per_day\":9,\"Outside_temp\":38,\"Room_size\":180,\"Temp_set\":20}', 'name': 'mlModel'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 75, 'prompt_tokens': 1138, 'total_tokens': 1213, 'completion_time': 0.214285714, 'prompt_time': 0.045206826, 'queue_time': 0.058336057000000004, 'total_time': 0.25949254}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_dd4ae1c591', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--e832c3f8-386d-4e35-ac82-f7a54f6e833a-0', tool_calls=[{'name': 'mlModel', 'args': {'AC_type': 2, 'Hours_per_day': 9, 'Outside_temp': 38, 'Room_size': 180, 'Temp_set': 20}, 'id': 'cv66wcxah', 'type': 'tool_call'}], usage_metadata={'input_tokens': 1138, 'output_tokens': 75, 'total_tokens': 1213}), ToolMessage(content='The predicted electricity cost is ₹1242.42', name='mlModel', id='ea6a0c75-a984-42a9-bb18-4faabfd8ce20', tool_call_id='cv66wcxah'), AIMessage(content=\"Based on your AC usage, the predicted electricity cost is ₹1242.42.\\n\\nThis setup may not be the most efficient, as running the AC for 9 hours daily at 20°C can be considered wasteful. Here's why:\\n\\n* Running the AC for an extended period can lead to excessive energy consumption, especially when the outside temperature is high (38°C).\\n* Setting the thermostat to 20°C may be too low, as the recommended temperature for optimal energy efficiency is between 24°C to 26°C.\\n\\nTo optimize your AC usage and reduce costs, consider the following suggestions:\\n\\n1. **Raise the thermostat temperature**: Try setting the thermostat to 24°C or 25°C instead of 20°C. This can help reduce energy consumption while still maintaining a comfortable temperature. For every degree you raise the thermostat, you can save around 3-5% on your electricity bill.\\n2. **Implement a timer or smart scheduling**: Instead of running the AC for 9 hours straight, consider running it for 7-8 hours with a 30-minute to 1-hour break in between. This can help reduce the overall energy consumption. You can also explore smart scheduling options, such as turning off the AC when you're not in the room or when the outside temperature cools down.\\n\\nBy implementing these changes, you can potentially reduce your electricity cost and make your AC usage more efficient.\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 284, 'prompt_tokens': 136, 'total_tokens': 420, 'completion_time': 0.870856092, 'prompt_time': 0.004071811, 'queue_time': 0.056962607, 'total_time': 0.874927903}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_dd4ae1c591', 'finish_reason': 'stop', 'logprobs': None}, id='run--17e1d753-599b-423d-8151-ffca758d34a1-0', usage_metadata={'input_tokens': 136, 'output_tokens': 284, 'total_tokens': 420})]\n"
      ]
     }
    ],
@@ -715,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "bce781c3",
    "metadata": {},
    "outputs": [
@@ -728,8 +711,8 @@
       "My AC runs for 9 hours daily at 20 degrees. The room is 180 sq ft, outside temp is 38°C, and it’s a 2 ton AC. How much will I have to pay for electricity? Also, is this setup okay or am I wasting power?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  mlModel (n9p0mhsj2)\n",
-      " Call ID: n9p0mhsj2\n",
+      "  mlModel (cv66wcxah)\n",
+      " Call ID: cv66wcxah\n",
       "  Args:\n",
       "    AC_type: 2\n",
       "    Hours_per_day: 9\n",
@@ -742,19 +725,19 @@
       "The predicted electricity cost is ₹1242.42\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "Based on your AC usage, it's predicted that you'll have to pay approximately ₹1242.42 for electricity.\n",
+      "Based on your AC usage, the predicted electricity cost is ₹1242.42.\n",
       "\n",
-      "This setup may not be the most efficient, considering the outside temperature is quite high (38°C) and the AC is running for 9 hours daily. Here's why:\n",
+      "This setup may not be the most efficient, as running the AC for 9 hours daily at 20°C can be considered wasteful. Here's why:\n",
       "\n",
-      "* Running the AC at 20°C for an extended period can be energy-intensive, especially when the outside temperature is high.\n",
-      "* A 2-ton AC for a 180 sq ft room might be oversized, which can lead to increased energy consumption.\n",
+      "* Running the AC for an extended period can lead to excessive energy consumption, especially when the outside temperature is high (38°C).\n",
+      "* Setting the thermostat to 20°C may be too low, as the recommended temperature for optimal energy efficiency is between 24°C to 26°C.\n",
       "\n",
       "To optimize your AC usage and reduce costs, consider the following suggestions:\n",
       "\n",
-      "1. **Adjust the temperature**: Try increasing the temperature setting to 24°C or 25°C. This can help reduce energy consumption while still maintaining a comfortable temperature. For every degree of extra cooling, the energy consumption increases by 6-8%.\n",
-      "2. **Use a timer or schedule**: Instead of running the AC for 9 hours straight, consider using a timer or scheduling it to turn off during periods when the room is not occupied or when the outside temperature is slightly cooler (e.g., early morning or late evening).\n",
+      "1. **Raise the thermostat temperature**: Try setting the thermostat to 24°C or 25°C instead of 20°C. This can help reduce energy consumption while still maintaining a comfortable temperature. For every degree you raise the thermostat, you can save around 3-5% on your electricity bill.\n",
+      "2. **Implement a timer or smart scheduling**: Instead of running the AC for 9 hours straight, consider running it for 7-8 hours with a 30-minute to 1-hour break in between. This can help reduce the overall energy consumption. You can also explore smart scheduling options, such as turning off the AC when you're not in the room or when the outside temperature cools down.\n",
       "\n",
-      "By implementing these suggestions, you can potentially reduce your electricity costs and make your AC usage more efficient.\n"
+      "By implementing these changes, you can potentially reduce your electricity cost and make your AC usage more efficient.\n"
      ]
     }
    ],
@@ -766,7 +749,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32cb2779",
+   "id": "cb4acbca",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ewriter' from 'helper' (/home/anuj/anaconda3/lib/python3.12/site-packages/helper/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m      2\u001b[0m warnings\u001b[38;5;241m.\u001b[39mfilterwarnings(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mhelper\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ewriter, writer_gui\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ewriter' from 'helper' (/home/anuj/anaconda3/lib/python3.12/site-packages/helper/__init__.py)"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2ccd1e8",
    "metadata": {},
    "outputs": [],
    "source": []
